# haskerwaul

./: .gitattributes  .gitignore  .hlint.yaml  .vale.ini  README.md  cabal.project  flake.nix  garnix.yaml  haskerwaul.cabal  nixpkgs.nix
.config/: mustache.yaml
base/: README.md  haskerwaul-base.cabal
base/Haskerwaul/Base/: Prelude.hs
base/docs/: license-report.md
base/src/Haskerwaul/Base/: Prelude.hs
base/src/Haskerwaul/Base/Data/: Eq.hs  Function.hs  Maybe.hs  Semigroup.hs  String.hs  Tuple.hs
base/src/Haskerwaul/Base/System/: IO.hs
base/src/Haskerwaul/Base/Text/: Show.hs
haskerwaul/: CHANGELOG.md  README.md  haskerwaul.cabal
haskerwaul/docs/: license-report.md
haskerwaul/src/: Haskerwaul.hs
haskerwaul/src/Haskerwaul/: Automorphism.hs  Band.hs  Bifunctor.hs  Bimonoid.hs  Category.hs  Cocone.hs  Comonad.hs  Comonoid.hs  Cone.hs  Congruence.hs  Constraint.hs  Cospan.hs  Day.hs  Dioid.hs  Duoid.hs  Endofunctor.hs  Endomorphism.hs  Field.hs  Functor.hs  GaloisConnection.hs  Group.hs  Groupoid.hs  Hemiring.hs  Isomorphism.hs  Lattice.hs  Law.hs  Loop.hs  Loopoid.hs  Magma.hs  Magmoid.hs  Meadow.hs  Module.hs  Monad.hs  Monoid.hs  Negation.hs  Object.hs  Orphans.hs  Preorder.hs  Presheaf.hs  Profunctor.hs  (+21 more)
haskerwaul/src/Haskerwaul/Algebra/: Boolean.hs  Heyting.hs
haskerwaul/src/Haskerwaul/Algebra/Heyting/: Complete.hs
haskerwaul/src/Haskerwaul/Band/: Laws.hs  LeftRegular.hs  Rectangular.hs
haskerwaul/src/Haskerwaul/Band/LeftRegular/: Laws.hs
haskerwaul/src/Haskerwaul/Categorification/: Horizontal.hs
haskerwaul/src/Haskerwaul/Category/: Bicartesian.hs  Boolean.hs  Cancellative.hs  Closed.hs  CoKleisli.hs  Coherent.hs  Concrete.hs  Distributive.hs  Duoidal.hs  Empty.hs  Functor.hs  Heyting.hs  Hypergraph.hs  Kleisli.hs  Laws.hs  LocallyCartesian.hs  Monoidal'.hs  Monoidal.hs  MonoidalUnit.hs  Opposite.hs  Over.hs  Pointed.hs  Presheaves.hs  Product.hs  Regular.hs  Ribbon.hs  Rig.hs  Semigroupal.hs  Small.hs  Terminal.hs  Under.hs
haskerwaul/src/Haskerwaul/Category/Closed/: Bicartesian.hs  Cartesian.hs  Compact.hs  Symmetric.hs
haskerwaul/src/Haskerwaul/Category/Complete/: Finitely.hs
haskerwaul/src/Haskerwaul/Category/Distributive/: Linearly.hs
haskerwaul/src/Haskerwaul/Category/Duoidal/: Normal.hs
haskerwaul/src/Haskerwaul/Category/Monoidal/: Balanced.hs  Braided.hs  Cartesian.hs  Closed.hs  Cocartesian.hs  Distributive.hs  Rigid.hs  Symmetric.hs  Symmetric.hs-boot  Traced.hs
haskerwaul/src/Haskerwaul/Category/Rig/: ColaxDistributive.hs
haskerwaul/src/Haskerwaul/Category/Semigroupal/: Laws.hs
haskerwaul/src/Haskerwaul/Category/Small/: Locally.hs
haskerwaul/src/Haskerwaul/Dioid/: Commutative.hs
haskerwaul/src/Haskerwaul/Duoid/: Components.hs  Laws.hs
haskerwaul/src/Haskerwaul/Embedding/: Yoneda.hs
haskerwaul/src/Haskerwaul/Extension/Kan/: Left.hs  Right.hs
haskerwaul/src/Haskerwaul/Field/: Totalized.hs
haskerwaul/src/Haskerwaul/Functor/: Adjoint.hs  Contravariant.hs  Diagonal.hs  Faithful.hs  Full.hs  Hom.hs  Strong.hs
haskerwaul/src/Haskerwaul/Group/: Abelian.hs
haskerwaul/src/Haskerwaul/Hemiring/: Near.hs
haskerwaul/src/Haskerwaul/Isomorphism/: Laws.hs  Natural.hs
haskerwaul/src/Haskerwaul/Lattice/: Bounded.hs  Complemented.hs  Complete.hs  Components.hs  Distributive.hs  Laws.hs  Modular.hs  Orthocomplemented.hs  Orthomodular.hs
haskerwaul/src/Haskerwaul/Law/: Associativity.hs  Asymmetry.hs  Commutativity.hs  Flexibility.hs  Idempotency.hs  Interchange.hs  Modularity.hs  Reflexivity.hs  Symmetry.hs
haskerwaul/src/Haskerwaul/Loop/: Commutative.hs
haskerwaul/src/Haskerwaul/Magma/: Commutative.hs  Flexible.hs  Invertible.hs  Unital.hs
haskerwaul/src/Haskerwaul/Magmoid/: Flexible.hs  Unital.hs
haskerwaul/src/Haskerwaul/Meadow/: Cancellation.hs  NonInvolutive.hs  NonTrivial.hs
haskerwaul/src/Haskerwaul/Module/: Left.hs  Right.hs
haskerwaul/src/Haskerwaul/Monad/: Codensity.hs  Frobenius.hs
haskerwaul/src/Haskerwaul/Monoid/: Cancellative.hs  Commutative.hs  Frobenius.hs  Graphic.hs  Hopf.hs  Laws.hs
haskerwaul/src/Haskerwaul/Object/: Dualizable.hs  Exponential.hs  Free.hs  Initial.hs  Integers.hs  Invertible.hs  NaturalNumbers.hs  Terminal.hs
haskerwaul/src/Haskerwaul/Order/: Canonical.hs  Linear.hs  Partial.hs  Prefix.hs  Total.hs
haskerwaul/src/Haskerwaul/Quasigroup/: Associative.hs  Commutative.hs  Invertible.hs  Left.hs  Right.hs
haskerwaul/src/Haskerwaul/Quasigroupoid/: Associative.hs
haskerwaul/src/Haskerwaul/Relation/: Apartness.hs  Binary.hs  Dependency.hs  Equality.hs  Equivalence.hs  Homogeneous.hs  Inequality.hs  Nullary.hs  Tolerance.hs  Unary.hs
haskerwaul/src/Haskerwaul/Residual/: Left.hs  Right.hs
haskerwaul/src/Haskerwaul/Rig/: Idempotent.hs  Laws.hs  Monus.hs  Near.hs
haskerwaul/src/Haskerwaul/Ring/: Boolean.hs  Commutative.hs  Nonunital.hs
haskerwaul/src/Haskerwaul/Semicategory/: Laws.hs
haskerwaul/src/Haskerwaul/Semigroup/: Commutative.hs  Inverse.hs  Laws.hs
haskerwaul/src/Haskerwaul/Semigroupoid/: Laws.hs
haskerwaul/src/Haskerwaul/Semilattice/: Bounded.hs  Laws.hs
haskerwaul/src/Haskerwaul/Semiring/: Components.hs  Idempotent.hs  MaxPlus.hs  MinPlus.hs  Near.hs  Pre.hs  Tropical.hs
haskerwaul/src/Haskerwaul/Shelf/: Left.hs  Right.hs
haskerwaul/src/Haskerwaul/Subcategory/: Full.hs  Wide.hs
haskerwaul/src/Haskerwaul/Topos/: Elementary.hs  Grothendieck.hs
haskerwaul/src/Haskerwaul/Transformation/: Dinatural.hs  Natural.hs
hedgehog/: README.md  haskerwaul-hedgehog.cabal
hedgehog/Haskerwaul/: Hedgehog.hs
hedgehog/Haskerwaul/Hedgehog/: Topos.hs
hedgehog/Haskerwaul/Hedgehog/Applied/: Set.hs
hedgehog/docs/: license-report.md
hedgehog/src/Haskerwaul/: Hedgehog.hs
hedgehog/src/Haskerwaul/Hedgehog/: Topos.hs
hedgehog/test/: Test.hs
hedgehog/test/Test/: Set.hs
trample/: Prelude.hs  README.md  haskerwaul-trample.cabal
trample/docs/: license-report.md
trample/src/: Prelude.hs
trample/src/Data/: Eq.hs  Function.hs  Maybe.hs  Semigroup.hs  String.hs  Tuple.hs
trample/src/System/: IO.hs
trample/src/Text/: Show.hs
trample/tests/: doctests.hs
(+308 files in other folders)
