cabal-version: 3.0

name: haskerwaul-base
version: 0.1.0.0
synopsis: ???
description: ???
author: Greg Pfeil <greg@technomadic.org>
maintainer: Greg Pfeil <greg@technomadic.org>
copyright: 2020–2024 Greg Pfeil
homepage: https://github.com/sellout/haskerwaul#readme
bug-reports: https://github.com/sellout/haskerwaul/issues
category: Control
build-type: Simple
license: AGPL-3.0-only
license-files:
  LICENSE
extra-source-files:
  README.md

source-repository head
  type:     git
  location: git@github.com:sellout/haskerwaul.git

library
  exposed-modules:
    Haskerwaul.Base.Prelude
  hs-source-dirs:
    src
  build-depends:
    base >= 4.12 && < 5,
    haskerwaul,
  default-language: Haskell2010
  default-extensions:
    ConstraintKinds
    DataKinds
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    NoMonomorphismRestriction
    PolyKinds
    QuantifiedConstraints
    RankNTypes
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    TypeOperators
  ghc-options:
    -Wall
