cabal-version: 3.0

name: haskerwaul-hedgehog
version: 0.1.0.0
synopsis: ???
description: ???
author: Greg Pfeil <greg@technomadic.org>
maintainer: Greg Pfeil <greg@technomadic.org>
copyright: 2020–2024 Greg Pfeil
homepage: https://github.com/sellout/haskerwaul#readme
bug-reports: https://github.com/sellout/haskerwaul/issues
category: Control
build-type: Simple
license: AGPL-3.0-only
license-files:
  LICENSE
extra-source-files:
  README.md

source-repository head
  type:     git
  location: git@github.com:sellout/haskerwaul.git

library
  default-language: Haskell2010
  hs-source-dirs:
    src
  exposed-modules:
    Haskerwaul.Hedgehog
    Haskerwaul.Hedgehog.Applied.Set
    Haskerwaul.Hedgehog.Topos
  default-extensions:
    ConstraintKinds
    DataKinds
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    NoMonomorphismRestriction
    PolyKinds
    QuantifiedConstraints
    RankNTypes
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    TypeOperators
  build-depends:
    base >= 4.12 && < 5,
    constraints,
    haskerwaul,
    hedgehog,
    hedgehog-fn,
  ghc-options:
    -Wall

test-suite haskerwaul
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is: Test.hs
  other-modules:
    Test.Set
  default-extensions:
    ConstraintKinds
    DataKinds
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    NoMonomorphismRestriction
    PolyKinds
    QuantifiedConstraints
    RankNTypes
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    TypeOperators
  build-depends:
    base >= 4.12 && < 5,
    constraints,
    containers,
    haskerwaul,
    haskerwaul-hedgehog,
    hedgehog,
  ghc-options:
    -O2
    -Wall
